--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "bootstrap": "^3.4.1",
+    "core-js": "^3.8.3",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
