--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "express": "^4.17.1",
+    "immer": "^8.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.14",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
+    "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
